--- a/angular.json
+++ b/angular.json
@@ -93,6 +93,12 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/ProWay-Computers/"
+          }
         }
       }
     }
